@@ -61,6 +61,9 @@ __thiscall void Entity_Familiar::WispInit();
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ecd0000000a1????????33c58945??5657508d45??64a3????????8bf9897d":
 __thiscall bool Entity_Familiar::wisp_kill();
 
+"558bec6aff68????????64a1????????5083ec74a1????????33c58945??5657508d45??64a3????????8bf9897d??f30f7e05":
+__thiscall void Entity_Familiar::delirium_morph();
+
 
 struct Entity_Familiar depends (ColorMod, ItemConfig_Item) : public Entity {
 {{
