@@ -181,6 +181,26 @@ LUA_FUNCTION(Lua_FamiliarInvalidateCachedMultiplier) {
 	return 0;
 }
 
+LUA_FUNCTION(Lua_FamiliarIsLilDelirium) {
+	auto* fam = lua::GetUserdata<Entity_Familiar*>(L, 1, lua::Metatables::ENTITY_FAMILIAR, "EntityFamiliar");
+
+	lua_pushboolean(L, fam->_isLilDelirium);
+	return 1;
+}
+
+LUA_FUNCTION(Lua_SetLilDelirium) {
+	auto* fam = lua::GetUserdata<Entity_Familiar*>(L, 1, lua::Metatables::ENTITY_FAMILIAR, "EntityFamiliar");
+	bool isLilDelirium = lua_toboolean(L, 2);
+
+	fam->_isLilDelirium = isLilDelirium;
+	
+	if (isLilDelirium) {
+		fam->delirium_morph();
+	}
+
+	return 0;
+}
+
 HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 	super();
 
@@ -205,6 +225,8 @@ HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 		{ "GetItemConfig", Lua_FamiliarGetItemConfig },
 		{ "InvalidateCachedMultiplier", Lua_FamiliarInvalidateCachedMultiplier },
 		{ "GetMultiplier", Lua_FamiliarGetMultiplier },
+		{ "IsLilDelirium", Lua_FamiliarIsLilDelirium },
+		{ "SetLilDelirium", Lua_SetLilDelirium },
 		{ NULL, NULL }
 	};
 
